--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,43 @@
+alabaster==0.7.13
 astroid==2.13.3
 attrs==22.2.0
+Babel==2.12.1
 build==0.10.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
 dill==0.3.6
+docutils==0.19
 factory-boy==3.2.1
 Faker==17.0.0
+idna==3.4
+imagesize==1.4.1
 iniconfig==2.0.0
 isort==5.11.4
+Jinja2==3.1.2
 lazy-object-proxy==1.9.0
+MarkupSafe==2.1.2
 mccabe==0.7.0
 packaging==23.0
 platformdirs==2.6.2
 pluggy==1.0.0
 pycodestyle==2.10.0
+Pygments==2.14.0
 pylint==2.15.10
 pyproject_hooks==1.0.0
 pytest==7.2.1
 python-dateutil==2.8.2
+requests==2.28.2
 six==1.16.0
+snowballstemmer==2.2.0
+Sphinx==6.1.3
+sphinx-copybutton==0.5.1
+sphinx-press-theme==0.8.0
+sphinxcontrib-applehelp==1.0.4
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
 tomlkit==0.11.6
+urllib3==1.26.14
 wrapt==1.14.1
